add eslint and prettier

--- a/app/routes/posts/build-a-cli-using-nodejs.mdx
+++ b/app/routes/posts/build-a-cli-using-nodejs.mdx
@@ -2,24 +2,34 @@
 slug: build-a-cli-using-nodejs
 meta:
   title: How to build a CLI using NodeJS
-  description: CLI (Command Line Interface) is one of the most basic and powerful applications ever created by mankind. We all use CLI every day, whether it be npm, git, or any other CLI. Does your daily basis workflow have something that you have to do over and over again? 🤔. The chances are that it could be automated using CLI ✨
+  description:
+    CLI (Command Line Interface) is one of the most basic and powerful
+    applications ever created by mankind. We all use CLI every day, whether it
+    be npm, git, or any other CLI. Does your daily basis workflow have something
+    that you have to do over and over again? 🤔. The chances are that it could
+    be automated using CLI ✨
 ---
 
 ## How to build a CLI using NodeJS 💻
 
-CLI (Command Line Interface) is one of the most basic and powerful applications ever created by mankind. We all use CLI every day, whether it be npm, git, or any other CLI. Does your daily basis workflow have something that you have to do over and over again? 🤔. The chances are that it could be automated using CLI ✨
+CLI (Command Line Interface) is one of the most basic and powerful applications
+ever created by mankind. We all use CLI every day, whether it be npm, git, or
+any other CLI. Does your daily basis workflow have something that you have to do
+over and over again? 🤔. The chances are that it could be automated using CLI ✨
 
 So let's get started 🏄
 
 ![](https://c.tenor.com/r3XdvPsAV3kAAAAC/despicable-me-minions.gif)
 
-Today we are going to be building a CLI which would generate starter templates with TailwindCSS pre-installed.
+Today we are going to be building a CLI which would generate starter templates
+with TailwindCSS pre-installed.
 
 # Prerequisites
 
 Here are a few tools which you would need to follow along with the tutorial:
 
-1. A LTS (Long Term Support) version of [NodeJS](https://nodejs.org/en/) installed.
+1. A LTS (Long Term Support) version of [NodeJS](https://nodejs.org/en/)
+   installed.
 2. A text editor.
 
 # Setting up the project
@@ -50,13 +60,17 @@ npm init
 Now that we have our NodeJS setup ready. Let's start building our CLI
 
 1. Create a folder named `bin` in the root directory of your project folder.
-2. Create a file called `index.js` in the `bin` folder. This is going to be the main file of the CLI.
-3. Now open up the `package.json` file and change the value of the key `main` to `./bin/index.js`.
-4. Now add an entry into the `package.json` file called `bin` and add set its key to `tcli` and its value to `./bin/index.js`
+2. Create a file called `index.js` in the `bin` folder. This is going to be the
+   main file of the CLI.
+3. Now open up the `package.json` file and change the value of the key `main` to
+   `./bin/index.js`.
+4. Now add an entry into the `package.json` file called `bin` and add set its
+   key to `tcli` and its value to `./bin/index.js`
 
    > The word `tcli` is the keyword which we would be using to call our CLI.
 
-After making the changes the `package.json` file should look something like this:
+After making the changes the `package.json` file should look something like
+this:
 
 ```JSON
 {
@@ -82,19 +96,21 @@ After making the changes the `package.json` file should look something like this
 #! /usr/bin/env node
 ```
 
-> The line starting with a `#!` is called a shebang line. A shebang line is used to tell the absolute path to the interpreter that will run the below code.
+> The line starting with a `#!` is called a shebang line. A shebang line is used
+> to tell the absolute path to the interpreter that will run the below code.
 
 Let's add some JS code so that we can test the CLI out 🚀.
 
 7. Adding some JS code
 
 ```javascript
-console.log('The CLI is working 🚀');
+console.log('The CLI is working 🚀')
 ```
 
 8. Installing and testing the CLI out
 
-A CLI is meant to be called from anywhere in the system so let's install it globally by using the following command
+A CLI is meant to be called from anywhere in the system so let's install it
+globally by using the following command
 
 ```bash
 npm install -g .
@@ -127,25 +143,26 @@ Here is the boilerplate for inquirer
 ```javascript
 #! /usr/bin/env node
 
-const inquirer = require('inquirer');
+const inquirer = require('inquirer')
 
 inquirer
   .prompt([
     /* Pass your questions in here */
   ])
-  .then((answers) => {
+  .then(answers => {
     // Use user feedback for... whatever!!
-  });
+  })
 ```
 
 ## Adding questions
 
-We have to pass questions as objects. Let's add the first question asking about the JS framework.
+We have to pass questions as objects. Let's add the first question asking about
+the JS framework.
 
 ```javascript
 #! /usr/bin/env node
 
-const inquirer = require('inquirer');
+const inquirer = require('inquirer')
 
 inquirer
   .prompt([
@@ -156,7 +173,7 @@ inquirer
       choices: ['React', 'NextJS', 'Angular', 'Svelte', 'VueJS'],
     },
   ])
-  .then((answers) => {});
+  .then(answers => {})
 ```
 
 Let's break it down and understand what each part means
@@ -167,7 +184,8 @@ Let's break it down and understand what each part means
 
 - `name` : Inquirer returns the answers in the form of an object. For example:
 
-  - If we add `console.log(answers);`, then we would get a result something like this
+  - If we add `console.log(answers);`, then we would get a result something like
+    this
 
 ![](https://imgur.com/4INxAWe.png)
 
@@ -180,7 +198,9 @@ So here the `name` is the `key` of the object
 
 ## Cleaning up the codebase [Optional]
 
-We could create a folder inside the `bin` folder named `utils` and create a file inside the `utils` folder named `questions.js`. In the `questions.js` we can store the questions and import them into the `index.js` file
+We could create a folder inside the `bin` folder named `utils` and create a file
+inside the `utils` folder named `questions.js`. In the `questions.js` we can
+store the questions and import them into the `index.js` file
 
 `utils/questions.js`
 
@@ -193,7 +213,7 @@ const questions = [
     message: 'Choose the JS framework which you are using:',
     choices: ['React', 'NextJS', 'Angular', 'Svelte', 'VueJS'],
   },
-];
+]
 
 // This question would be shown only when the user choose either React or NextJS
 const questionsTs = [
@@ -203,10 +223,10 @@ const questionsTs = [
     message: 'Does your project use TypeScript?',
     choices: ['Yes', 'No'],
   },
-];
+]
 
-module.exports.questions = questions;
-module.exports.questionsTs = questionsTs;
+module.exports.questions = questions
+module.exports.questionsTs = questionsTs
 ```
 
 `index.js`
@@ -214,22 +234,26 @@ module.exports.questionsTs = questionsTs;
 ```javascript
 #! /usr/bin/env node
 
-const inquirer = require('inquirer');
+const inquirer = require('inquirer')
 
-const { questions, questionsTs } = require('./utils/questions.js');
+const { questions, questionsTs } = require('./utils/questions.js')
 
-inquirer.prompt(questions).then((answers) => {
+inquirer.prompt(questions).then(answers => {
   // Use user feedback for... whatever!!
-});
+})
 ```
 
 # Adding logic
 
 It's time to add some logic as we are doing creating questions.
 
-Accessing answers to questions are similar to accessing the value of a key from an object. The value of the answer of a specific question is `answers.<name-of-the-question>`
+Accessing answers to questions are similar to accessing the value of a key from
+an object. The value of the answer of a specific question is
+`answers.<name-of-the-question>`
 
-As we are creating starter files, let's use [ShellJS](https://github.com/shelljs/shelljs) to run commands like `git clone`, `mkdir`...
+As we are creating starter files, let's use
+[ShellJS](https://github.com/shelljs/shelljs) to run commands like `git clone`,
+`mkdir`...
 
 ## Installing ShellJS
 
@@ -278,19 +302,26 @@ inquirer.prompt(questions).then((answers) => {
 
 Let's find some templates for the JS frameworks integrated with TailwindCSS
 
-- [React + TailwindCSS](https://github.com/YashKumarVerma/react-tailwind-template) by [YashKumarVerma](https://github.com/YashKumarVerma)
-- [NextJS + TailwindCSS](https://github.com/Neeraj1005/Nextjs-tailwind-template) by [Neeraj1005](https://github.com/Neeraj1005)
-- [React + TailwindCSS + TypeScript](https://github.com/GKaszewski/react-tailwind-typescript-template) by [GKaszewski](https://github.com/GKaszewski)
-- [NextJS + TailwindCSS + TypeScript](https://github.com/avneesh0612/next-starter) by [avneesh0612](https://github.com/avneesh0612)
-- [Svelte + TailwindCSS](https://github.com/jhanca-vm/Svelte-Tailwind) by [jhanca-vm](https://github.com/jhanca-vm)
-- [VueJS + TailwindCSS](https://github.com/web2033/vite-vue3-tailwind-starter) by [web2023](https://github.com/web2033)
+- [React + TailwindCSS](https://github.com/YashKumarVerma/react-tailwind-template)
+  by [YashKumarVerma](https://github.com/YashKumarVerma)
+- [NextJS + TailwindCSS](https://github.com/Neeraj1005/Nextjs-tailwind-template)
+  by [Neeraj1005](https://github.com/Neeraj1005)
+- [React + TailwindCSS + TypeScript](https://github.com/GKaszewski/react-tailwind-typescript-template)
+  by [GKaszewski](https://github.com/GKaszewski)
+- [NextJS + TailwindCSS + TypeScript](https://github.com/avneesh0612/next-starter)
+  by [avneesh0612](https://github.com/avneesh0612)
+- [Svelte + TailwindCSS](https://github.com/jhanca-vm/Svelte-Tailwind) by
+  [jhanca-vm](https://github.com/jhanca-vm)
+- [VueJS + TailwindCSS](https://github.com/web2033/vite-vue3-tailwind-starter)
+  by [web2023](https://github.com/web2033)
 
-Thanks a lot to the wonderful people who have made these great templates for the community ✨
+Thanks a lot to the wonderful people who have made these great templates for the
+community ✨
 
 To run a `git clone` command, use ShellJS we have just used the `exec` method
 
 ```javascript
-shell.exec('git clone <repo-link>');
+shell.exec('git clone <repo-link>')
 ```
 
 Let's fill up the if and else blocks now
@@ -298,90 +329,91 @@ Let's fill up the if and else blocks now
 ```javascript
 #! /usr/bin/env node
 
-const inquirer = require('inquirer');
-const shell = require('shelljs');
+const inquirer = require('inquirer')
+const shell = require('shelljs')
 
-const path = process.cwd();
+const path = process.cwd()
 
-const { questions, questionsTs } = require('./utils/questions.js');
+const { questions, questionsTs } = require('./utils/questions.js')
 
-inquirer.prompt(questions).then((answers) => {
+inquirer.prompt(questions).then(answers => {
   if (answers.framework === 'React') {
-    inquirer.prompt(questionsTs).then((answersTs) => {
+    inquirer.prompt(questionsTs).then(answersTs => {
       if (answersTs.typescript === 'Yes') {
-        shell.exec(`mkdir ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
         shell.exec(
-          `git clone https://github.com/GKaszewski/react-tailwind-typescript-template ${answers.projectName}`
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          `git clone https://github.com/GKaszewski/react-tailwind-typescript-template ${answers.projectName}`,
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       } else {
-        shell.exec(`mkdir ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
         shell.exec(
-          `git clone https://github.com/YashKumarVerma/react-tailwind-template ${answers.projectName}`
-        );
-        console.log('🛠️  Successfully build the required files');
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          `git clone https://github.com/YashKumarVerma/react-tailwind-template ${answers.projectName}`,
+        )
+        console.log('🛠️  Successfully build the required files')
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       }
-    });
+    })
   } else if (answers.framework === 'NextJS') {
-    inquirer.prompt(questionsTs).then((answersTs) => {
+    inquirer.prompt(questionsTs).then(answersTs => {
       if (answersTs.typescript === 'Yes') {
-        shell.exec(`mkdir ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
         shell.exec(
-          `git clone https://github.com/avneesh0612/next-starter ${answers.projectName}`
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          `git clone https://github.com/avneesh0612/next-starter ${answers.projectName}`,
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       } else {
-        shell.exec(`mkdir ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
         shell.exec(
-          `git clone https://github.com/Neeraj1005/Nextjs-tailwind-template ${answers.projectName}`
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          `git clone https://github.com/Neeraj1005/Nextjs-tailwind-template ${answers.projectName}`,
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       }
-    });
+    })
   } else if (answers.framework === 'Svelte') {
-    shell.exec(`mkdir ${answers.projectName}`);
+    shell.exec(`mkdir ${answers.projectName}`)
     shell.exec(
-      `git clone https://github.com/jhanca-vm/Svelte-Tailwind ${answers.projectName}`
-    );
-    shell.cd(`${path}/${answers.projectName}`);
-    shell.exec(`npm i`);
+      `git clone https://github.com/jhanca-vm/Svelte-Tailwind ${answers.projectName}`,
+    )
+    shell.cd(`${path}/${answers.projectName}`)
+    shell.exec(`npm i`)
     console.log(
-      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-    );
+      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+    )
   } else {
-    shell.exec(`mkdir ${answers.projectName}`);
+    shell.exec(`mkdir ${answers.projectName}`)
     shell.exec(
-      `git clone https://github.com/web2033/vite-vue3-tailwind-starter ${answers.projectName}`
-    );
-    shell.cd(`${path}/${answers.projectName}`);
-    shell.exec(`npm i`);
+      `git clone https://github.com/web2033/vite-vue3-tailwind-starter ${answers.projectName}`,
+    )
+    shell.cd(`${path}/${answers.projectName}`)
+    shell.exec(`npm i`)
     console.log(
-      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-    );
+      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+    )
   }
-});
+})
 ```
 
 ## Cleaning up the codebase [Optional]
 
-Let's create a new file in `utils` folder named `links.js`. Let's create a hashmap where we will store the GitHub repository links for the template repos.
+Let's create a new file in `utils` folder named `links.js`. Let's create a
+hashmap where we will store the GitHub repository links for the template repos.
 
 ```javascript
 let links = new Map([
@@ -394,97 +426,96 @@ let links = new Map([
   ['NextJS-TS', 'https://github.com/avneesh0612/next-starter'],
   ['Svelte', 'https://github.com/jhanca-vm/Svelte-Tailwind'],
   ['Vue', 'https://github.com/web2033/vite-vue3-tailwind-starter'],
-]);
+])
 
-module.exports = links;
+module.exports = links
 ```
 
-Let's import `utils/index.js` and replace the GitHub template repositories links.
+Let's import `utils/index.js` and replace the GitHub template repositories
+links.
 
 ```javascript
 #! /usr/bin/env node
 
-const inquirer = require('inquirer');
-const shell = require('shelljs');
+const inquirer = require('inquirer')
+const shell = require('shelljs')
 
-const path = process.cwd();
+const path = process.cwd()
 
-const { questions, questionsTs } = require('./utils/questions.js');
-const links = require('./utils/links.js');
+const { questions, questionsTs } = require('./utils/questions.js')
+const links = require('./utils/links.js')
 
-inquirer.prompt(questions).then((answers) => {
+inquirer.prompt(questions).then(answers => {
   if (answers.framework === 'React') {
-    inquirer.prompt(questionsTs).then((answersTs) => {
+    inquirer.prompt(questionsTs).then(answersTs => {
       if (answersTs.typescript === 'Yes') {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log('📁 Created a folder for the project');
-        shell.exec(`git clone ${links.get('React-TS')} ${answers.projectName}`);
-        console.log(`🖨️  Cloned started files into ${answers.projectName}`);
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log('📁 Created a folder for the project')
+        shell.exec(`git clone ${links.get('React-TS')} ${answers.projectName}`)
+        console.log(`🖨️  Cloned started files into ${answers.projectName}`)
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       } else {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log('📁 Created a folder for the project');
-        shell.exec(`git clone ${links.get('React')} ${answers.projectName}`);
-        console.log(`🖨️  Cloned started files into ${answers.projectName}`);
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log('📁 Created a folder for the project')
+        shell.exec(`git clone ${links.get('React')} ${answers.projectName}`)
+        console.log(`🖨️  Cloned started files into ${answers.projectName}`)
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       }
-    });
+    })
   } else if (answers.framework === 'NextJS') {
-    inquirer.prompt(questionsTs).then((answersTs) => {
+    inquirer.prompt(questionsTs).then(answersTs => {
       if (answersTs.typescript === 'Yes') {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log('📁 Created a folder for the project');
-        shell.exec(
-          `git clone ${links.get('NextJS-TS')} ${answers.projectName}`
-        );
-        console.log(`🖨️  Cloned started files into ${answers.projectName}`);
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log('📁 Created a folder for the project')
+        shell.exec(`git clone ${links.get('NextJS-TS')} ${answers.projectName}`)
+        console.log(`🖨️  Cloned started files into ${answers.projectName}`)
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       } else {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log('📁 Created a folder for the project');
-        shell.exec(`git clone ${links.get('NextJS')} ${answers.projectName}`);
-        console.log(`🖨️  Cloned started files into ${answers.projectName}`);
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log('📁 Created a folder for the project')
+        shell.exec(`git clone ${links.get('NextJS')} ${answers.projectName}`)
+        console.log(`🖨️  Cloned started files into ${answers.projectName}`)
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
-          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-        );
+          '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+        )
       }
-    });
+    })
   } else if (answers.framework === 'Svelte') {
-    shell.exec(`mkdir ${answers.projectName}`);
-    console.log('📁 Created a folder for the project');
-    shell.exec(`git clone ${links.get('Svelte')} ${answers.projectName}`);
-    console.log(`🖨️  Cloned started files into ${answers.projectName}`);
-    shell.cd(`${path}/${answers.projectName}`);
-    shell.exec(`npm i`);
+    shell.exec(`mkdir ${answers.projectName}`)
+    console.log('📁 Created a folder for the project')
+    shell.exec(`git clone ${links.get('Svelte')} ${answers.projectName}`)
+    console.log(`🖨️  Cloned started files into ${answers.projectName}`)
+    shell.cd(`${path}/${answers.projectName}`)
+    shell.exec(`npm i`)
     console.log(
-      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-    );
+      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+    )
   } else {
-    shell.exec(`mkdir ${answers.projectName}`);
-    console.log('📁 Created a folder for the project');
-    shell.exec(`git clone ${links.get('Vue')} ${answers.projectName}`);
-    console.log(`🖨️  Cloned started files into ${answers.projectName}`);
-    shell.cd(`${path}/${answers.projectName}`);
-    shell.exec(`npm i`);
+    shell.exec(`mkdir ${answers.projectName}`)
+    console.log('📁 Created a folder for the project')
+    shell.exec(`git clone ${links.get('Vue')} ${answers.projectName}`)
+    console.log(`🖨️  Cloned started files into ${answers.projectName}`)
+    shell.cd(`${path}/${answers.projectName}`)
+    shell.exec(`npm i`)
     console.log(
-      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-    );
+      '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+    )
   }
-});
+})
 ```
 
 # Beautification using Chalk
@@ -500,7 +531,7 @@ npm install chalk
 Let's now import chalk into our `index.js` file
 
 ```javascript
-const chalk = require('chalk');
+const chalk = require('chalk')
 ```
 
 Chalk have few pre built color methods
@@ -512,144 +543,151 @@ Chalk also offers a `hex` method by which you can use any color
 Let's add green color to our success output
 
 ```javascript
-console.log(chalk.green('Hey 👀, I am a green colored text')); // This is how we can add colors by using chalk
+console.log(chalk.green('Hey 👀, I am a green colored text')) // This is how we can add colors by using chalk
 ```
 
 ```javascript
 #! /usr/bin/env node
 
-const inquirer = require('inquirer');
-const shell = require('shelljs');
-const chalk = require('chalk');
+const inquirer = require('inquirer')
+const shell = require('shelljs')
+const chalk = require('chalk')
 
-const path = process.cwd();
+const path = process.cwd()
 
-const { questions, questionsTs } = require('./utils/questions.js');
-const links = require('./utils/links.js');
+const { questions, questionsTs } = require('./utils/questions.js')
+const links = require('./utils/links.js')
 
-inquirer.prompt(questions).then((answers) => {
+inquirer.prompt(questions).then(answers => {
   if (answers.framework === 'React') {
-    inquirer.prompt(questionsTs).then((answersTs) => {
+    inquirer.prompt(questionsTs).then(answersTs => {
       if (answersTs.typescript === 'Yes') {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log(chalk.green('📁 Created a folder for the project'));
-        shell.exec(`git clone ${links.get('React-TS')} ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log(chalk.green('📁 Created a folder for the project'))
+        shell.exec(`git clone ${links.get('React-TS')} ${answers.projectName}`)
         console.log(
-          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`)
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`),
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
           chalk.green(
-            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-          )
-        );
+            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+          ),
+        )
       } else {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log(chalk.green('📁 Created a folder for the project'));
-        shell.exec(`git clone ${links.get('React')} ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log(chalk.green('📁 Created a folder for the project'))
+        shell.exec(`git clone ${links.get('React')} ${answers.projectName}`)
         console.log(
-          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`)
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`),
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
           chalk.green(
-            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-          )
-        );
+            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+          ),
+        )
       }
-    });
+    })
   } else if (answers.framework === 'NextJS') {
-    inquirer.prompt(questionsTs).then((answersTs) => {
+    inquirer.prompt(questionsTs).then(answersTs => {
       if (answersTs.typescript === 'Yes') {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log(chalk.green('📁 Created a folder for the project'));
-        shell.exec(
-          `git clone ${links.get('NextJS-TS')} ${answers.projectName}`
-        );
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log(chalk.green('📁 Created a folder for the project'))
+        shell.exec(`git clone ${links.get('NextJS-TS')} ${answers.projectName}`)
         console.log(
-          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`)
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`),
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
           chalk.green(
-            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-          )
-        );
+            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+          ),
+        )
       } else {
-        shell.exec(`mkdir ${answers.projectName}`);
-        console.log(chalk.green('📁 Created a folder for the project'));
-        shell.exec(`git clone ${links.get('NextJS')} ${answers.projectName}`);
+        shell.exec(`mkdir ${answers.projectName}`)
+        console.log(chalk.green('📁 Created a folder for the project'))
+        shell.exec(`git clone ${links.get('NextJS')} ${answers.projectName}`)
         console.log(
-          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`)
-        );
-        shell.cd(`${path}/${answers.projectName}`);
-        shell.exec(`npm i`);
+          chalk.green(`🖨️  Cloned started files into ${answers.projectName}`),
+        )
+        shell.cd(`${path}/${answers.projectName}`)
+        shell.exec(`npm i`)
         console.log(
           chalk.green(
-            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-          )
-        );
+            '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+          ),
+        )
       }
-    });
+    })
   } else if (answers.framework === 'Svelte') {
-    shell.exec(`mkdir ${answers.projectName}`);
-    console.log(chalk.green('📁 Created a folder for the project'));
-    shell.exec(`git clone ${links.get('Svelte')} ${answers.projectName}`);
+    shell.exec(`mkdir ${answers.projectName}`)
+    console.log(chalk.green('📁 Created a folder for the project'))
+    shell.exec(`git clone ${links.get('Svelte')} ${answers.projectName}`)
     console.log(
-      chalk.green(`🖨️  Cloned started files into ${answers.projectName}`)
-    );
-    shell.cd(`${path}/${answers.projectName}`);
-    shell.exec(`npm i`);
+      chalk.green(`🖨️  Cloned started files into ${answers.projectName}`),
+    )
+    shell.cd(`${path}/${answers.projectName}`)
+    shell.exec(`npm i`)
     console.log(
       chalk.green(
-        '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-      )
-    );
+        '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+      ),
+    )
   } else {
-    shell.exec(`mkdir ${answers.projectName}`);
-    console.log(chalk.green('📁 Created a folder for the project'));
-    shell.exec(`git clone ${links.get('Vue')} ${answers.projectName}`);
+    shell.exec(`mkdir ${answers.projectName}`)
+    console.log(chalk.green('📁 Created a folder for the project'))
+    shell.exec(`git clone ${links.get('Vue')} ${answers.projectName}`)
     console.log(
-      chalk.green(`🖨️  Cloned started files into ${answers.projectName}`)
-    );
-    shell.cd(`${path}/${answers.projectName}`);
-    shell.exec(`npm i`);
+      chalk.green(`🖨️  Cloned started files into ${answers.projectName}`),
+    )
+    shell.cd(`${path}/${answers.projectName}`)
+    shell.exec(`npm i`)
     console.log(
       chalk.green(
-        '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀'
-      )
-    );
+        '👨‍💻  Successfully installed all the required dependencies\nHappy hacking 🚀',
+      ),
+    )
   }
-});
+})
 ```
 
 # Publishing it to npm 🚀
 
-We have successfully completed building our CLI 🥳. Let's now deploy it to npm, so that other developers can use our CLI.
+We have successfully completed building our CLI 🥳. Let's now deploy it to npm,
+so that other developers can use our CLI.
 
 ## Creating a npm account
 
-Go over to [npmjs.org](https://www.npmjs.com/) and create an account and make sure that you are verifying it as well
+Go over to [npmjs.org](https://www.npmjs.com/) and create an account and make
+sure that you are verifying it as well
 
 ## Unique package name
 
-npm packages have unique names. npm doesn't allow publishing a package with a name that is already taken. Go over to [npmjs.org](https://www.npmjs.com/) and check whether your package name is taken or not.
+npm packages have unique names. npm doesn't allow publishing a package with a
+name that is already taken. Go over to [npmjs.org](https://www.npmjs.com/) and
+check whether your package name is taken or not.
 
-`tailwindcli` is already taken by [this](https://www.npmjs.com/package/tailwindcli) package. So I have to change the name to `tailwindcsscli`
+`tailwindcli` is already taken by
+[this](https://www.npmjs.com/package/tailwindcli) package. So I have to change
+the name to `tailwindcsscli`
 
 ### Changing name of the package
 
-If your package is unique and is not taken, skip this step, if it isn't then follow along with this step.
+If your package is unique and is not taken, skip this step, if it isn't then
+follow along with this step.
 
 1. Open `package.json` file
-2. Change the value of the key `name` to a unique name, in my case I am changing it to `tailwindcsscli`
+2. Change the value of the key `name` to a unique name, in my case I am changing
+   it to `tailwindcsscli`
 
 ## Adding keywords
 
-Let's add a few keywords related to our package. As we have built a CLI during this tutorial, let's have the following as keywords :
+Let's add a few keywords related to our package. As we have built a CLI during
+this tutorial, let's have the following as keywords :
 
 - cli
 - tailwindcss
@@ -657,11 +695,16 @@ Let's add a few keywords related to our package. As we have built a CLI during t
 
 ## Adding license
 
-Check out [license-templates](https://github.com/licenses/license-templates) GitHub repository for license templates which you could use in your project. In my case, I am using MIT license
+Check out [license-templates](https://github.com/licenses/license-templates)
+GitHub repository for license templates which you could use in your project. In
+my case, I am using MIT license
 
 ## Adding repository link
 
-If you have a repository on any git provider, such as GitHub, GitLab, you could link to that in a new entry named `repository` with the keys as `type` and `url` and the values as `git` and `git+<your-git-repo-link>.git` respectively. It would look something like this
+If you have a repository on any git provider, such as GitHub, GitLab, you could
+link to that in a new entry named `repository` with the keys as `type` and `url`
+and the values as `git` and `git+<your-git-repo-link>.git` respectively. It
+would look something like this
 
 ```json
 "repository": {
@@ -670,7 +713,8 @@ If you have a repository on any git provider, such as GitHub, GitLab, you could 
 }
 ```
 
-In my case, the repo link is https://github.com/Kira272921/tailwindcsscli. So it would look something like this
+In my case, the repo link is https://github.com/Kira272921/tailwindcsscli. So it
+would look something like this
 
 ```json
 "repository": {
@@ -681,7 +725,9 @@ In my case, the repo link is https://github.com/Kira272921/tailwindcsscli. So it
 
 ### Adding link to bugs reports
 
-Let's add the link to the site/place where the users do report bugs about our package. Generally, it would be the link to the issues page in the GitHub repository
+Let's add the link to the site/place where the users do report bugs about our
+package. Generally, it would be the link to the issues page in the GitHub
+repository
 
 ```json
 "bugs": {
@@ -691,7 +737,8 @@ Let's add the link to the site/place where the users do report bugs about our pa
 
 ### Adding link to the homepage
 
-Let's add the link to the homepage of our npm package. Generally, it would be the link to the README link of the GitHub repository
+Let's add the link to the homepage of our npm package. Generally, it would be
+the link to the README link of the GitHub repository
 
 ```json
 "homepage": "https://github.com/Kira272921/tailwindcsscli/issues#readme"
@@ -699,7 +746,9 @@ Let's add the link to the homepage of our npm package. Generally, it would be th
 
 ## Login into your npm account via npm CLI
 
-Let's now login in to our npm account via npm CLI so that we can publish our package to npm. To login into your npm account, run the following command and enter the correct credentials.
+Let's now login in to our npm account via npm CLI so that we can publish our
+package to npm. To login into your npm account, run the following command and
+enter the correct credentials.
 
 ```bash
 npm login
@@ -717,7 +766,8 @@ npm publish
 
 ![](https://imgur.com/422d1uG.png)
 
-Let's change the name of our package accordingly and publish using the command recommended. My `package.json` looks something like this now
+Let's change the name of our package accordingly and publish using the command
+recommended. My `package.json` looks something like this now
 
 ```json
 {
@@ -764,4 +814,5 @@ Fingers crossed 🤞. Yay! We have successfully published our CLI to npm 🥳
 The code for this tutorial is available on Github
 https://github.com/Kira272921/tailwindcsscli
 
-That's for this blog folks. Hope that you have learned something new from this blog post. Meet y'all in the next blog post 👋.
+That's for this blog folks. Hope that you have learned something new from this
+blog post. Meet y'all in the next blog post 👋.
